WebInDeploy/kali-ACL-SG.tf
resource "aws_network_acl" "all-kali" {
  vpc_id = "${aws_vpc.kali.id}"

  egress {
    protocol   = "-1"
    rule_no    = 2
    action     = "allow"
    cidr_block = "0.0.0.0/0"
    from_port  = 0
    to_port    = 0
  }

  ingress {
    protocol   = "-1"
    rule_no    = 1
    action     = "allow"
    cidr_block = "0.0.0.0/0"
    from_port  = 0
    to_port    = 0
  }

  tags {
    Name = "kali open acl"
  }
}

#Security Groups
resource "aws_security_group" "kaliWideOpen" {
  name        = "kaliWideOpen"
  description = "Wide open security group"
  vpc_id      = "${aws_vpc.kali.id}"

  ingress {
    from_port   = "0"
    to_port     = "0"
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = "0"
    to_port     = "0"
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
